[package]
name = "swpstat"
version = "0.1.0"
edition = "2021"
authors = ["yxqsnz <yxqsnz@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.18", features = ["derive"] }
colored = "2.0.0"
procfs = "0.14.1"
humansize = { version = "2.1.0", features = ["impl_style"] }
rayon = "1.5.3"
once_cell = "1.15.0"
